--- a/index.ipynb
+++ b/index.ipynb
@@ -2,28 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-30T15:22:50.833295Z",
+     "start_time": "2020-11-30T15:22:50.827857Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from optimisations.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Optimisations\n",
     "\n",
-    "> Summary description here."
+    "> This is a small playground where you can experiment with different implementations of optimizers, on different objective functions. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "This project includes utilities to visualize different kinds of plots and animations of how an optimisation performed."
    ]
   },
   {
@@ -87,6 +92,31 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
